feat: Implement core ebook reading and playback functionality
This commit introduces the fundamental capabilities for the AI Ebook Reader. It includes:

-   **File loading:** Support for EPUB and PDF documents.
-   **Text extraction:** Robust extraction of text content from loaded files.
-   **Playback controls:** Basic play, pause, and navigation functionalities.
-   **Text segmentation:** Splitting content into sentences for smoother narration.
-   **Language and localization:** Updates to project name and metadata to English.
-   **Dependency updates:** Refinements to `pdfjs-dist` and removal of the deprecated `@google/genai` package.
-   **UI improvements:** New loading and icon components for a better user experience.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leitor-de-e-books-com-ia",
+  "name": "ai-ebook-reader",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.27.0",
     "react": "^19.2.0",
     "epubjs": "^0.3.93",
     "react-dom": "^19.2.0",
-    "pdfjs-dist": "^5.4.296",
+    "pdfjs-dist": "4.4.168",
     "idb": "^8.0.3"
   },
   "devDependencies": {
