--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Leitor de E-books com IA",
-  "short_name": "Leitor IA",
-  "description": "Carregue seus livros e documentos (PDF, EPUB, TXT) e ouça-os em várias línguas com vozes naturais, traduzidos e narrados por IA.",
+  "name": "AI Ebook Reader",
+  "short_name": "AI Reader",
+  "description": "Load your books and documents (PDF, EPUB, TXT) and listen to them with natural-sounding voices.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#1e293b",
